--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,5 +1,5 @@
 
 <!-- Copyright -->
 <div id="copyright">
-  <ul><li>&copy; HTML5 UP</li><li>Design by <a href="https://html5up.net" rel="nofollow">HTML5 UP</a></li>
+  <ul><li>Design by <a href="https://html5up.net" rel="nofollow">HTML5 UP</a></li>
 </div>
